# rust-rocket-example

./: .gitignore  Cargo.toml  Procfile  README.md  app.json
src/: main.rs  web_client.rs
src/request_models/: time_series.rs
