[package]
name = "rust-rocket-example"
version = "0.1.0"
authors = ["Harry Laoulakos <harry@talos.software>"]
edition = "2018"

[dependencies]
# rocket = "0.4.4"
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", branch = "async" }
serde =  { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
# job_scheduler = "1.2.1"
reqwest = { version = "0.10.4", features = ["json"] }


[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket.git"
branch = "async" 
default-features = false
features = ["json"]